Minor refactoring, better variable name 'postcode', I wasn't sure if this could work due to name clashes, but scope appears to work the way I hoped it did (variables in javascript don't clash with variables in html)

--- a/postcode.html
+++ b/postcode.html
@@ -6,8 +6,8 @@
 
     <script language="JavaScript">
         function lookup_postcode(form){
-            var pc = form.postcode.value;
-            alert ("You typed: " + pc)
+            var postcode = form.postcode.value;
+            alert ("You typed: " + postcode)
         }
     </script>
 </head>
