Added first lookup value, and added toUppercase to the postcode

--- a/postcode.html
+++ b/postcode.html
@@ -6,7 +6,10 @@
 
     <script language="JavaScript">
         function lookup_postcode(form){
-            var postcode = form.postcode.value;
+            var postcode = form.postcode.value.toUpperCase();
+            if (postcode == "2805CZ"){
+                alert ("Blokouderling: Anne Bosman")
+            }
             alert ("You typed: " + postcode)
         }
     </script>
