--- a/postcode.html
+++ b/postcode.html
@@ -4,29 +4,35 @@
     <meta charset="UTF-8">
     <title>Postcode</title>
 
-    <script language="JavaScript">
-        function lookup_postcode(form){
-            var postcode = form.postcode.value.toUpperCase();
-            switch(postcode) {
-                case "2805CZ":
-                case "2805CC":
-                    var blokouderling = "Anne Bosman";
-                    break;
-                default:
-                    var blokouderling = "Onbekend";
-            }
-            alert ("Blokouderling: " + blokouderling)
-        }
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $("button").click(function(){
+                var postcode = $("#postcode").val().toUpperCase().replace(/ /g,'');
+
+                switch(postcode) {
+                    case "2805CZ":
+                    case "2805CC":
+                        var blokouderling = "Anne Bosman";
+                        break;
+                    case "2806AA":
+                        var blokouderling = "Timen Eilander";
+                        break;
+                    default:
+                        var blokouderling = "Onbekend";
+                }
+                $("#postcode").after(blokouderling);
+            });
+        });
     </script>
+
 </head>
 
 <body>
-    <form name = "postcode" action = "" method = "get">
-        Postcode:<br>
-        <input type="text" name="postcode">
-        <br>
-        <input type="submit" value="Zoek uw blokouderling" onClick="lookup_postcode(this.form)">
-    </form>
+
+    <p>Postcode: <input type="text" id="postcode" value="1234AB"></p>
+
+    <button>Uw blokouderling</button>
 
 </body>
 </html>
