--- a/test.html
+++ b/test.html
@@ -12,18 +12,15 @@
 
 <body>
     <script src="app/postcode.js"></script>
-    <p>Postcode: <input type="text" id="postcode_id" value="1234AB" maxlength="6" size="6"></p>
+    <p>Postcode: <input type="text" id="postcode_id" value="1234 ab" maxlength="6" size="6"></p>
 
     <button>Uw blokouderling</button>
 
 
     <script type="text/ruby">
-      require 'opal'
-      require 'opal-jquery'
       puts "hi from Ruby"
 
-      postcode = Element.find('#postcode_id')
-      #postcode_to_check = Element['.postcode']
+      postcode = Element.find('#postcode_id').value.upcase.gsub(/ /g,'')
       puts postcode
 
 #      <!--var postcode = $("#postcode").val().toUpperCase().replace(/ /g,'');-->
