--- a/postcode.html
+++ b/postcode.html
@@ -11,8 +11,19 @@
 </head>
 
 <body>
-    <p>Postcode: <input type="text" id="postcode_id" value="2801  ab" maxlength="6" size="6"></p>
-    <button>Uw blokouderling</button>
+    <form>
+        Postcode: <input type="text" name="postcode" id=postcode_id value="2801AA"><br>
+        <!--<input type="submit" value="Vind uw blok en ouderling">-->
+    </form>
+    <form>
+        <button type=button id="button_id">Vind uw blok en ouderling</button>
+    </form>
+
+    <!--TODO: For whatever reason the new value in the form is not used, but always only the initial value of 2801AA -->
+
+    <!--<p>Postcode: <input type="text" id="postcode_id" value="2801ab" maxlength="6" size="6"></p>-->
+    <!--<button type="button" id="postcode_button_id">Uw blokouderling</button>-->
+    <h2 id="blokouderling">Blok en ouderling</h2>
 
     <!--Please note, this .js file is generated from a Ruby file (usually automagically by Guard)-->
     <script src="app/blokouderling_lookup.js"></script>
