Working state - deployed to wordpress

--- a/postcode.html
+++ b/postcode.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="utf-8">
 
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/jquery-migrate/jquery-migrate.min.js"></script>
-    <script src="resources/js/opal.js"></script>
+    <!--Scripts from a CDN for production code-->
+    <script src="http://cdn.opalrb.org/opal/current/opal.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/opal-jquery/0.0.8/opal-jquery.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/opal-jquery/0.0.8/opal-jquery.min.js"></script>-->
+    <!--<script src="http://cdn.opalrb.org/opal/current/native.min.js"></script>-->
+    <!--<script src="http://cdn.opalrb.org/opal/current/opal-parser.min.js"></script>-->
+
+
+    <!--Local Scripts for development code-->
+    <!--<script src="bower_components/jquery/dist/jquery.js"></script>-->
+    <!--<script src="bower_components/jquery-migrate/jquery-migrate.min.js"></script>-->
+    <!--<script src="resources/js/opal.js"></script>-->
     <script src="resources/js/opal-jquery.js"></script>
+
+    <!--My scripts-->
     <script src="app/blokouderling_lookup.js"></script>
 
 </head>
