Working version, deployed to wordpress

--- a/postcode.html
+++ b/postcode.html
@@ -32,8 +32,13 @@
 
     <h2 id="blokouderling_id">Blok en ouderling</h2>
 
+
     <!--Please note, this .js file is generated from a Ruby file (usually automagically by Guard)-->
     <script src="app/blokouderling_lookup.js"></script>
+
+
+    <h2 id="x">Eerste regel</h2>
+    <h2 id="y">Tweede regel</h2>
 
 </body>
 
